# wconfig

./: Cargo.toml  Makefile  README.md  build.rs
scripts/: bump-version.sh  check-clean-tree.sh  deploy.sh
src/: app.rs  autostart.rs  hotkey.rs  ipc.rs  logging.rs  main.rs  single_instance.rs  tray.rs
src/action/: focus_or_launch.rs  launch.rs  mod.rs  script.rs  url.rs
src/config/: mod.rs  schema.rs  watcher.rs
src/remap/: hook.rs  mod.rs  state.rs  timer.rs  vk.rs
src/ui/: bindings.rs  general.rs  mod.rs  remap.rs  theme.rs
